# matmul-benchmark

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  analyze_stats.py  compare_perf.sh  number_hierarchy.py  presentation.org  presentation_focused.org  profile.sh  scaling.plt  setup_perf.sh
.cargo/: config.toml
.github/workflows/: test.yml
arrayfire_demo/: Cargo.toml  README.md
arrayfire_demo/examples/: custom_matmul.rs  custom_matmul_blocked.rs  simple_comparison.rs  simple_gpu.rs  test_layout.rs
arrayfire_demo/src/: main.rs
benches/: blocked_128.rs  blocked_64.rs  fma_dotprod_128.rs  naive_128.rs  naive_64.rs  nalgebra_128.rs  nalgebra_64.rs  simd_128.rs  simd_64.rs  simd_dotprod_128.rs
media/Tex/: 34569ac8091e42c3.tex  455486a4997c2f36.tex  4e890c4c67b14b5e.tex  7c6cdcb4b35395a7.tex  9458af7a3fe6914d.tex  aae19c5fdb87c1d4.tex  c8ec9d3cef882f90.tex  d72082c26abf0cb7.tex  da12cd4b0ef79294.tex  fb02ec8723f99f3d.tex
media/videos/memory_access_anim/480p15/partial_movie_files/CompareAccessPatterns/: partial_movie_file_list.txt
media/videos/memory_access_anim/480p15/partial_movie_files/RowMajorAccess/: partial_movie_file_list.txt
media/videos/number_hierarchy/480p15/partial_movie_files/NumberHierarchy/: partial_movie_file_list.txt
src/: benchmark.rs  dotprod.rs  implementations.rs  lib.rs  main.rs  matrix.rs  test_data.rs
visualization/: README.md  cache_hierarchy.py  index.html  matmul_animations.py  memory_access.html  memory_access_anim.py
